# pysdid

./: .gitignore  Readme.md  pyproject.toml
examples/: proposition99.csv  test.ipynb
syndid/: __init__.py  data_utils.py  estimator.py  optimize.py
